mercury/inc/fourcrowns-fields/assets/css/custom-style.css
/* ... */
.space-footer-copy-menu ul li a, .space-footer-copy-left {
    color: #ffffff!important;
}

div#ez-toc-container {
    margin-bottom: 25px!important;
}

.attachment-mercury-custom-logo {
    max-width: 226px!important;
}

.fc-outline {
    list-style: none;
    padding: 0;
    margin: 0;
    background: #f5f5f5;
    border-left: 4px solid var(--secondary-color);
    padding-left: 1rem!important;
    padding-top: 0.5rem!important;
    padding-bottom: 0.5rem!important;
    font-size: 0.95rem;
    margin-left: 0!important;
}

.fc-outline a {
    text-decoration: none!important;
    color: #206dd8!important;
}

.fc-outline a:hover {
    text-decoration: none!important;
    color: var(--main-color)!important;
}

.fc-outline li {
    margin-bottom: 5px;
    border: none!important;
    list-style: none!important;
}

.fc-outline-sub {
    padding-left: 20px;
    margin-top: 5px;
}

.fc-outline-headline {
    margin: 0!important;
    font-size: 1.1em !important;
}

.fc-outline-toggle {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    font-size: 1.4rem;
    font-weight: bold;
    background: #f5f7f6;
    border: none;
    padding: 1rem;
    cursor: pointer;
    border-left: 4px solid var(--secondary-color);
    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
}

.collapsed {
    margin-bottom: 1.45em;
}

.fc-toggle-icon {
    transition: transform 0.2s ease-in-out;
}

.fc-outline-toggle[aria-expanded="true"] .fc-toggle-icon {
    transform: rotate(180deg);
}

.fc-outline-content {
    display:none;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.open-content {
    padding: 5px;
    background-color: #57606f;
    border-radius: 50%;
    color: #ffffff;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.fc-outline-toggle:hover .open-content {
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
    background-color: var(--main-color);
}

@media screen and (max-width: 479px) {
    .space-archive-loop-item-img, .space-archive-loop-item-title-box {
        float: left!important;
    }

    .space-archive-loop-item-img {
        width: 33.33333333%!important;
    }

    .space-archive-loop-item-title-box {
        width: 66.66666666%!important;
    }

    .space-archive-loop-item-meta, .space-archive-loop-item-img-category {
        display: none!important;
    }

    .space-archive-loop-item-more {
        display: block!important;
    }

    .space-archive-loop-item-title-box-ins {
        margin-top: 0!important;
    }

    .space-archive-loop-item {
        margin-bottom: 35px!important;
    }

    .space-archive-loop-item-title {
        margin-top: 0!important;
    }
}

@media screen and (max-width: 767px) and (min-width: 480px) {
    .space-archive-loop-item-excerpt {
        display: block!important;
    }
}

@media screen and (max-width: 991px) and (min-width: 768px) {
    .space-archive-loop-item-excerpt {
        display: block!important;
    }
}


a.btn-wide {
    display: block;                /* aby zabralo 100 % šířky sloupce */
    width: 100%;
    margin-top: 1rem;
    padding: 0.9rem 1.2rem;
    text-align: center;
    background: var(--main-color);
    color: #151515;
    background-color: #fff;
    border: solid 2px var(--main-color);
    font-weight: 700;
    border-radius: 1rem;
    text-decoration: none;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

a.btn-wide:hover {
    border: solid 2px #57606f;
    color: var(--main-color);
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

/* Tlačítko */
a.visit-btn {
    display: inline-block;
    color: white;
    border-radius: 0.5rem;
    font-weight: bold;
    font-size: 0.9rem!important;
    margin-top: 0.5rem!important;
    margin-bottom: 0!important;
    transition: background-color 0.3s;
    text-decoration: none;
    max-width: 50%!important;
    text-align: center!important;
}

a.visit-btn:hover {
    border-radius: 0.5rem;
}

a.secondary-btn {
    background-color: #c0c6d1!important;
    color: #151515!important;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

a.secondary-btn:hover {
    background-color: #57606f!important;
    color: #ffffff!important;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.hp-top-text {
    padding: 0!important;
}

.main-title {
    max-width: 90%;
}

